# ECLO

./: README.md  eclo.toml  meson.build
res/: icon.xcf
src/: _legacy_exeversion_winapi.cpp  _legacy_exeversion_winapi.h  clientversion.cpp  clientversion.h  exeversion.cpp  exeversion.h  logger.cpp  logger.h  main.cpp  meson.build  netaddress.cpp  netaddress.h  patcher_address.cpp  patcher_address.h  patcher_encryption.cpp  patcher_encryption.h  patcher_utils.cpp  patcher_utils.h  resources.rc
