sources += files([
    'clientversion.cpp',
    'clientversion.h',
    'exeversion.cpp',
    'exeversion.h',
    'logger.cpp',
    'logger.h',
    'main.cpp',
    'netaddress.cpp',
    'netaddress.h',
    'patcher_address.cpp',
    'patcher_address.h',
    'patcher_encryption.cpp',
    'patcher_encryption.h',
    'patcher_utils.cpp',
    'patcher_utils.h'
])